--- a/css/_basket/basket.scss
+++ b/css/_basket/basket.scss
@@ -15,12 +15,17 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  &__title{
+    color: $text-color_dark;
+    font-family: $main-fonts;
+    font-size: calc(14px + 4 * (100vw - 400px) / 1920);
+  }
   //basket__container
 
   &__container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
 
   // .basket__wrapper
@@ -28,7 +33,6 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
     display: grid;
     grid-template-columns: [col1-s] minmax(216px, 400px) [col2-s] minmax(75px, 104px) [col3-s] minmax(125px, 400px) [col4-s] minmax(75px, 104px) [col5-s] 30px;
     grid-template-rows: [row1-s] 30px [row2-s] 1px [row3-s] 100px;
-    grid-auto-rows: [row1-s] 30px [row2-s] 1px [row3-s] 100px;
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -46,27 +50,18 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
   &__price {
     grid-column: col2-s/col3-s;
     grid-row: row1-s/row2-s;
-    color: $text-color_dark;
-    font-family: $main-fonts;
-    font-size: 18px;
   }
 
   // .basket__kol
   &__kol {
     grid-column: col3-s/col4-s;
     grid-row: row1-s/row2-s;
-    color: $text-color_dark;
-    font-family: $main-fonts;
-    font-size: 18px;
   }
 
   // .basket__itogo
   &__itogo {
     grid-column: col4-s/col5-s;
     grid-row: row1-s/row2-s;
-    color: $text-color_dark;
-    font-family: $main-fonts;
-    font-size: 18px;
   }
 
   //.basket__close
@@ -100,7 +95,8 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
       max-width: 160px;
       color:#20191D;
       font-family: $main-fonts;
-      font-size: 18px;
+     
+      font-size: calc(13px + 5 * (100vw - 400px) / 1920);
       font-weight: 600;
     }
   }
@@ -112,7 +108,8 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
     grid-row: row3-s/row3-s;
     color: $text-color_black;
     font-family: $main-fonts-bold;
-    font-size: 20px;
+  
+    font-size: calc(16px + 4 * (100vw - 400px) / 1920);
     font-weight: 700;
   }
   //.basket__input
@@ -131,7 +128,7 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
     grid-row: row3-s/row3-s;
     color: $text-color_black;
     font-family: $main-fonts-bold;
-    font-size: 20px;
+    font-size: calc(16px + 4 * (100vw - 400px) / 1920);
     font-weight: 700;
   }
   //basket__total
@@ -146,7 +143,8 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
     flex: 0 0 auto;
     color: $text-color;
     font-family: $main-fonts;
-    font-size: 30px;
+    font-size: calc(20px + 10 * (100vw - 400px) / 1920);
+    text-align: center;
   }
 
   //basket__btn
@@ -164,9 +162,7 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
     flex-direction: column;
     row-gap: 20px;
   }
-  .basket__total{
-    width: 100vw;
-  }
+ 
   
 }
 
@@ -218,4 +214,11 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
   grid-column: col3-s/col3-s;
   grid-row: row4-s/row4-s;
 }
+}
+
+@media (max-width: 600px){
+  .basket__total{
+    width: 100%;
+  }
+  
 }
