--- a/css/_catalog/catalog.css
+++ b/css/_catalog/catalog.css
@@ -262,6 +262,7 @@ select {
   padding: 20px 0;
 }
 .catalog-ordering {
+  font-size: calc(14px + 2 * (100vw - 400px) / 1920);
   text-align: right;
   margin-bottom: 30px;
   display: -webkit-box;
@@ -273,6 +274,9 @@ select {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .catalog-ordering__checkbox {
   display: -webkit-box;
@@ -335,7 +339,7 @@ select {
 }
 
 .сatalog__range {
-  margin-bottom: 20px;
+  padding-bottom: 60px;
 }
 
 .title__filter {
@@ -366,6 +370,15 @@ select {
   border: 0.2px solid #a7a4a5;
   font-size: 14px;
   color: #a7a4a5;
+}
+.price__min input:active {
+  border: 0.2px solid #cc9744;
+}
+.price__min :focus {
+  outline: none;
+}
+.price__min input:focus-visible {
+  border: 0.2px solid #cc9744;
 }
 .price__min-input {
   width: 100%;
@@ -448,6 +461,7 @@ select {
   }
   .catalog .active {
     display: block;
+    padding-bottom: 4%;
   }
   .catalog__body {
     display: block;
@@ -460,19 +474,27 @@ select {
   }
   .catalog .select__wrapper {
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .catalog .select__wrapper::before {
-    content: url("/img/filter2.svg");
+    content: url("../../img/filter2.svg");
     margin-right: 10px;
     top: 9px;
     left: 0px;
     width: 14px;
-    height: 12px;
   }
   .catalog .catalog-ordering {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+  .catalog .catalog-ordering h3 {
+    display: none;
   }
   .catalog .catalog-ordering select {
     border: none;
@@ -492,7 +514,6 @@ select {
     margin-right: 10px;
   }
   .catalog__wrapper-body {
-    margin-top: 40px;
     grid-template-columns: [col1-s] minmax(126px, 200px) [col2-s] minmax(126px, 200px);
     grid-column-gap: calc(20px + 75 * (100vw - 400px) / 760);
     -webkit-box-pack: center;
@@ -500,46 +521,19 @@ select {
             justify-content: center;
   }
 }
+@media (max-width: 464px) {
+  .catalog__wrapper {
+    max-width: 100%;
+    display: none;
+  }
+  .catalog__wrapper .btn {
+    width: 100%;
+  }
+}
 .btn-block {
   margin-top: calc(30px + 30 * (100vw - 400px) / 1920);
-}
-
-.filter-range-wrapper {
-  margin-bottom: 10px;
-  padding: 29px 0;
-}
-
-.filter-range {
-  position: relative;
-}
-
-.filter-range-scale {
-  height: 2px;
-  border-radius: 60px;
-  background: rgba(61, 49, 55, 0.96);
-}
-
-.filter-range-bar {
-  height: 2px;
-  width: 75%;
-  background: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
-}
-
-.filter-range-handle {
-  position: absolute;
-  top: 50%;
-  left: 0%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 15px;
-  height: 15px;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  padding: 0;
-  border-radius: 50%;
-  background: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
-  cursor: pointer;
-  border: none;
+  width: 100%;
+  text-align: center;
 }
 
 .compound-form {
@@ -612,32 +606,6 @@ input:checked + label {
 }
 
 /* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 62px;
-  height: 32px;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 24px;
-  width: 24px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
 input:checked + .slider {
   background: linear-gradient(211deg, #c38b34 27.99%, #ecc47e 80.38%);
 }
@@ -653,14 +621,6 @@ input:checked + .slider:before {
 }
 
 /* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
 input[type=range] {
   width: 100%;
   -webkit-appearance: none;
@@ -694,4 +654,75 @@ input[type=range]::-moz-range-thumb {
   background: #cc9744;
   border-radius: 10px/100%;
   cursor: pointer;
+}
+
+section.range-slider {
+  position: relative;
+  width: 275px;
+  height: auto;
+  float: left;
+  text-align: center;
+  padding-top: 15px;
+}
+section.range-slider input[type=range] {
+  pointer-events: none;
+  position: absolute;
+  background: none;
+  border: none;
+  left: 0;
+  width: 275px;
+  outline: none;
+  height: 20px;
+  margin: 0;
+  padding: 0;
+}
+section.range-slider input[type=range]::-webkit-slider-thumb {
+  bottom: 3px;
+  pointer-events: all;
+  position: relative;
+  z-index: 1;
+  outline: 0;
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  border: none;
+  border-radius: 14px; /* android <= 2.2 */ /* older mobile safari and android > 2.2 */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, white), to(#ce8715));
+  background-image: linear-gradient(to bottom, white 0, #ce8715 100%); /* W3C */
+}
+section.range-slider input[type=range]::-moz-range-thumb {
+  pointer-events: all;
+  position: relative;
+  z-index: 10;
+  -moz-appearance: none;
+  width: 20px;
+  height: 20px;
+  border: none;
+  border-radius: 14px;
+  background-image: linear-gradient(to bottom, white 0, #ce8715 100%); /* W3C */
+}
+section.range-slider input[type=range]::-ms-thumb {
+  pointer-events: all;
+  position: relative;
+  z-index: 10;
+  -ms-appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 14px;
+  border: 0;
+  background-image: linear-gradient(to bottom, white 0, #ce8715 100%); /* W3C */
+}
+section.range-slider input[type=range]::-moz-range-track {
+  position: relative;
+  z-index: -1;
+  background-color: rgb(0, 0, 0);
+  border: 0;
+}
+section.range-slider input[type=range]:last-of-type::-moz-range-track {
+  -moz-appearance: none;
+  background: none transparent;
+  border: 0;
+}
+section.range-slider input[type=range]::-moz-focus-outer {
+  border: 0;
 }/*# sourceMappingURL=catalog.css.map */
