--- a/css/style2-header-wrapper.scss
+++ b/css/style2-header-wrapper.scss
@@ -99,6 +99,15 @@ margin-left: 4px;
   padding-top: 15px;
   z-index: 2;
 }
+
+}
+@media (max-width: 830px) {
+  .dropdown-content {
+    display: none;
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 }
 
 /* Показать выпадающее меню при наведении курсора */
@@ -108,6 +117,7 @@ margin-left: 4px;
   visibility: visible;
   transition:1s; /* время аниамции */
 }
+
 
 
 
