--- a/css/_our_contacts/our_contacts.css
+++ b/css/_our_contacts/our_contacts.css
@@ -45,7 +45,7 @@
   display: flex;
   -webkit-box-align: start;
       -ms-flex-align: start;
-          align-items: start;
+          align-items: flex-start;
   gap: 2rem;
   padding: 20px;
   width: 395px;
