--- a/css/style2-header-wrapper.css
+++ b/css/style2-header-wrapper.css
@@ -314,7 +314,7 @@ select {
 }
 .dropdown__item {
   color: #000;
-  background: #D9D9D9;
+  background: #d9d9d9;
   padding: 6px 11px;
   border-bottom: 0.1px solid #3d3137;
   display: block;
@@ -336,46 +336,31 @@ select {
   opacity: 0; /* По умолчанию скрываем подменю */
   visibility: hidden;
   -webkit-transition-property: opacity, visibility;
-  transition-property: opacity, visibility; /* Важно чтобы transition применялось к обоим свойствам */
+  transition-property: opacity, visibility;
   -webkit-transition-duration: 0.02s;
-          transition-duration: 0.02s; /* Добавляем анимацию пропадания 0.3 сек. */
+          transition-duration: 0.02s;
   padding-top: 15px;
   z-index: 2;
 }
 
 @media (max-width: 830px) {
-  .dropdown-content {
-    display: none;
-  }
-  .dropdown:hover .dropdown-content {
+  .header__menu-item:hover .dropdown-content {
     display: block;
+    position: relative;
   }
 }
-/* Показать выпадающее меню при наведении курсора */
-.dropdown:hover .dropdown-content {
+.header__menu-item:hover .dropdown-content {
   -webkit-transition-property: display;
   transition-property: display;
-  opacity: 1; /* Показываем подменю при ховере */
+  opacity: 1;
   visibility: visible;
   -webkit-transition: 1s;
-  transition: 1s; /* время аниамции */
+  transition: 1s;
 }
 
 @media (max-width: 1800px) {
   .header__soc {
     display: block;
-  }
-}
-@media (max-width: 1100px) {
-  .header__menu-item {
-    padding: 0;
-    width: 100%;
-  }
-  .header__menu-item .dropdown__item {
-    border-bottom: 0.1px solid #3d3137;
-    display: block;
-    width: 100%;
-    /* width: 133px; */
   }
 }
 @media (max-width: 978px) {
@@ -390,6 +375,16 @@ select {
   }
 }
 @media (max-width: 830px) {
+  .header__menu-item {
+    padding: 0;
+    width: 100%;
+  }
+  .header__menu-item .dropdown__item {
+    border-bottom: 0.1px solid #3d3137;
+    display: block;
+    width: 100%;
+    /* width: 133px; */
+  }
   .main-navigation ul li > a {
     padding: 6px;
     display: -webkit-box;
@@ -459,6 +454,14 @@ select {
   }
   .header__menu.active {
     top: 0;
-    background-color: #D9D9D9;
+    background-color: #d9d9d9;
   }
+}
+.s {
+  display: none;
+}
+
+.shows {
+  display: block;
+  position: relative;
 }/*# sourceMappingURL=style2-header-wrapper.css.map */
