--- a/css/style2-header-wrapper.scss
+++ b/css/style2-header-wrapper.scss
@@ -1,62 +1,58 @@
-@import 'style-general.scss';
+@import "style-general.scss";
 /*меню*/
-.header-wrapper{
+.header-wrapper {
   background-image: url(../img/main_bg1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
-.header{
-
-  &__soc{
+.header {
+  &__soc {
     display: flex;
     gap: 2em;
-      }
-  &__card{
-   font-size: 12px;
-   display: flex;
-   align-items: center;
-   &-item{
+  }
+  &__card {
+    font-size: 12px;
     display: flex;
-   align-items: center;
+    align-items: center;
+    &-item {
+      display: flex;
+      align-items: center;
 
-   .total_count{
-margin-left: 4px;
-   }
-    &:first-child {
-      
-      margin-right: calc(20px + 20 * (100vw - 400px) / 1920);
+      .total_count {
+        margin-left: 4px;
+      }
+      &:first-child {
+        margin-right: calc(20px + 20 * (100vw - 400px) / 1920);
+      }
+      img {
+        margin-right: 11px;
+      }
     }
-    img{
-      margin-right: 11px;
+  }
+  &__bottom {
+    display: flex;
+    align-items: center;
+    padding: 15px 0 15px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  &__menu {
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    &-item {
+      padding: 0 13px 0 13px;
+      font-size: calc(10px + 5 * (100vw - 400px) / 1920);
     }
   }
-  }
-  &__bottom{
-  display: flex;
-  align-items: center;
-  padding: 15px 0 15px 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  }
-&__menu{
-  display: flex;
-  align-items: center;
-  font-size: 15px;
-  &-item{
-    padding: 0 13px 0 13px;
-    font-size: calc(10px + 5 * (100vw - 400px) / 1920);
-  
 }
 
-  }
-}
-
-.dropdown{
+.dropdown {
   transition-property: block;
-  
-  &__svg{
+
+  &__svg {
     display: inline-block;
     vertical-align: middle;
     margin-left: 6px;
@@ -66,11 +62,9 @@ margin-left: 4px;
   position: relative;
   outline: none;
 
-  
-  &__item{
-    
+  &__item {
     color: $text-color_black;
-    background: #D9D9D9;
+    background: #d9d9d9;
     padding: 6px 11px;
     border-bottom: 0.1px solid $main-color;
     display: block;
@@ -78,175 +72,158 @@ margin-left: 4px;
     width: 165px;
     transition: none;
     &:hover {
-      background:$gradient-color;
-      color:#fff;
-
+      background: $gradient-color;
+      color: #fff;
     }
-    &:active{
-      background:$gradient-color;
-      color:#fff
+    &:active {
+      background: $gradient-color;
+      color: #fff;
     }
-
   }
 
-&-content{
-  position: absolute;
-  opacity: 0; /* По умолчанию скрываем подменю */
+  &-content {
+    position: absolute;
+    opacity: 0; /* По умолчанию скрываем подменю */
     visibility: hidden;
-    transition-property: opacity, visibility; /* Важно чтобы transition применялось к обоим свойствам */
-    transition-duration: 0.02s; /* Добавляем анимацию пропадания 0.3 сек. */
+    transition-property: opacity, visibility;
+    transition-duration: 0.02s;
     //transition-delay: 0.7s; /* Добавляем задержку появления в 0.15 сек. */
-  padding-top: 15px;
-  z-index: 2;
-}
-
+    padding-top: 15px;
+    z-index: 2;
+  }
 }
 @media (max-width: 830px) {
-  .dropdown-content {
-    display: none;
-  }
-  .dropdown:hover .dropdown-content {
+  .header__menu-item:hover .dropdown-content {
     display: block;
+    position: relative;
   }
 }
 
-/* Показать выпадающее меню при наведении курсора */
-.dropdown:hover .dropdown-content {
-  transition-property:display;
-  opacity: 1; /* Показываем подменю при ховере */
+.header__menu-item:hover .dropdown-content {
+  transition-property: display;
+  opacity: 1;
   visibility: visible;
-  transition:1s; /* время аниамции */
+  transition: 1s;
 }
 
-
-
-
-
-@media (max-width: 1800px){
-  .header{
-    &__soc{
+@media (max-width: 1800px) {
+  .header {
+    &__soc {
       display: block;
-      
     }
   }
+}
+
+@media (max-width: 1100px) {
+}
+
+@media (max-width: 978px) {
+  .header {
+    &__body {
+      &__form {
+        width: auto;
+      }
+    }
+    &__card {
+      span {
+        display: none;
+      }
+      &-item {
+        img {
+          margin-right: 6px;
+        }
+      }
+    }
   }
+}
 
+@media (max-width: 830px) {
+  .header__menu-item {
+    padding: 0;
+    width: 100%;
 
-  @media (max-width: 1100px){
-    .header__menu-item {
-      padding:0;
+    .dropdown__item {
+      border-bottom: 0.1px solid #3d3137;
+      display: block;
       width: 100%;
-      
-      .dropdown__item {
-      
-      
-   
-        border-bottom: 0.1px solid #3d3137;
-        display: block;
-        width: 100%;
-        /* width: 133px; */
+      /* width: 133px; */
     }
   }
+  .main-navigation ul li > a {
+    padding: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 13px;
+    border-bottom: 0.1px solid #3d3137;
+  }
+  .dropdown {
+    .dropdown-content {
+      padding: 0;
+      position: relative;
     }
-  
+  }
+  .header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    z-index: 3;
+  }
+  .header__burger::before,
+  .header__burger::after {
+    content: "";
+    background: $gradient-color;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    transition: all 0.3s ease 0s;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -ms-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+  }
 
-    @media (max-width: 978px){
-     .header{
-    &__body{
-        &__form{
-width: auto;}
-     
-      }
-      &__card{
-        span{
-          display: none;
-        }
-        &-item{
-          img{
-            margin-right: 6px;
-          }
-        }
-      }
-     }
-      }
+  .header__burger::before {
+    top: 0;
+  }
+  .header__burger::after {
+    bottom: 0;
+  }
+  .header__burger span {
+    background: $gradient-color;
+    top: 9px;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    transition: all 0.3s ease 0s;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -ms-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+  }
+  .header__menu {
+    flex-direction: column;
 
+    position: fixed;
+    overflow: auto;
+    top: -100%;
+    // right: 10%;
+    // width: 100%;
+    //height: 100%;
+    padding: 50px 10px 0px 10px;
+  }
+  .header__menu.active {
+    top: 0;
+    background-color: #d9d9d9;
+  }
+}
 
-      @media (max-width: 830px) {
-     
-        .main-navigation ul li > a {
-          padding: 6px;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          font-size: 13px;
-          border-bottom: 0.1px solid #3d3137;
-         
-      }
-        .dropdown {
-          
-        .dropdown-content {
-         padding: 0;
-          position:relative;
-      }
-        }
-        .header__burger {
-          display: block;
-          position: relative;
-          width: 30px;
-          height: 20px;
-          z-index: 3;
-        }
-        .header__burger::before,
-        .header__burger::after {
-          content: "";
-          background: $gradient-color;
-          position: absolute;
-          width: 100%;
-          height: 2px;
-          left: 0;
-          transition: all 0.3s ease 0s;
-          -webkit-transition: all 0.3s ease 0s;
-          -moz-transition: all 0.3s ease 0s;
-          -ms-transition: all 0.3s ease 0s;
-          -o-transition: all 0.3s ease 0s;
-        }
-      
-        .header__burger::before {
-          top: 0;
-        }
-        .header__burger::after {
-          bottom: 0;
-        }
-        .header__burger span {
-          background: $gradient-color;
-          top: 9px;
-          position: absolute;
-          width: 100%;
-          height: 2px;
-          transition: all 0.3s ease 0s;
-          -webkit-transition: all 0.3s ease 0s;
-          -moz-transition: all 0.3s ease 0s;
-          -ms-transition: all 0.3s ease 0s;
-          -o-transition: all 0.3s ease 0s;
-        }
-        .header__menu {
-          flex-direction: column;
-      
-          position: fixed;
-          overflow: auto;
-          top: -100%;
-        // right: 10%;
-         // width: 100%;
-          //height: 100%;
-          padding: 50px 10px 0px 10px;
-       
-        }
-        .header__menu.active {
-          top: 0;
-          background-color:#D9D9D9;
-        }
-      
-      }
-      
-      
-      
+.s {
+  display: none;
+}
+.shows {
+  display: block;
+  position: relative;
+}
