--- a/css/ordering/ordering.scss
+++ b/css/ordering/ordering.scss
@@ -50,6 +50,7 @@ background-clip: text;
         display: flex;
         align-items: center;
         gap: 1rem;
+        flex-wrap: wrap;
     }
 }
 
