--- a/css/ordering/ordering.css
+++ b/css/ordering/ordering.css
@@ -38,6 +38,8 @@
       -ms-flex-align: center;
           align-items: center;
   gap: 1rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .input {
